# interchain-event

./: .env.example  .gitignore  Cargo.toml  Dockerfile.dev  PHASE2_NOTES.md  PHASE3_NOTES.md  README.md  TEST_SCENARIO.md  TOKENOMICS_ANNEX.md  demo-kyc-flow.html  docker-compose.yml  interchain-events-contract-spec.md  interchain-events-contract.md
contracts/attestation-registry/: Cargo.toml
contracts/attestation-registry/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/interchain-events/: Cargo.toml
contracts/interchain-events/src/: contract.rs  error.rs  lib.rs  msg.rs  proto.rs  state.rs  verification.rs
contracts/proof-callback/: Cargo.toml
contracts/proof-callback/src/: contract.rs  msg.rs  state.rs
frontend/: nuxt.config.ts  package-lock.json  package.json
frontend/app/: app.vue
frontend/app/components/: SubscribeModal.vue  TreeNode.vue
frontend/app/composables/: useChains.ts  useKeplr.ts  useStateExplorer.ts
frontend/app/pages/: explorer.vue  index.vue  watcher.vue
frontend/server/api/watcher/: status.get.ts  submit-proof.post.ts
frontend/server/plugins/: watcher.ts
frontend/server/utils/: watcher.ts
scripts/: config.ts  iavl-key.ts  package-lock.json  package.json  proof.ts  test-flow.ts
