[workspace]
members = [
    "contracts/interchain-events",
    "contracts/attestation-registry",
    "contracts/proof-callback",
    "packages/shared",
]
resolver = "2"

[workspace.dependencies]
cosmwasm-std = { version = "2.2", features = ["stargate", "cosmwasm_2_2"] }
cosmwasm-schema = "2.2"
cw-storage-plus = "2.0"
cw2 = "2.0"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "2"
prost = "0.13"
ics23 = "0.12"

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = true
strip = true
