[package]
name = "interchain-events"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
prost = { workspace = true }
ics23 = { workspace = true }
serde_json = "1.0"
cross-chain-shared = { path = "../../packages/shared" }
